# CC7515-Tarea3

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  imgui.ini
examples/: CMakeLists.txt
examples/collision/: ball.cpp  ball.h  main.cpp
examples/collision/shaders/: fragment.glsl  vertex.glsl
examples/subroutines/: main.cpp
examples/subroutines/shaders/: fragment.glsl  vertex.glsl
examples/textures/: main.cpp
examples/textures/shaders/: fragment.glsl  vertex.glsl
include/glcore/: app.h  buffer.h  camera.h  core.h  shader.h  texture.h
main/: CMakeLists.txt  main.cpp
main/shaders/: cline_tess_eval.glsl  copy_vertex.glsl  fragment.glsl  geometry.geom  reference_tesc.glsl  reference_tese.glsl  reference_vs.glsl  sun_fragment.glsl  sun_tess_control.tesc  sun_tess_eval.tese  terrain_fragment.glsl  terrain_tess_control.tesc  terrain_tess_eval.tese  terrain_vertex.glsl  vertex.glsl
src/: CMakeLists.txt  app.cpp  buffer.cpp  camera.cpp  shader.cpp  texture.cpp
